updated to match milestone 3 requirements

--- a/edu-pixelboard-disabled-game-rules/main_server/appsettings.Development.json
+++ b/edu-pixelboard-disabled-game-rules/main_server/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Redis": "redis",
   "DetailedErrors": true,
-  "ClientUrl": "http://localhost:5085",
+  "ClientUrl": "http://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,7 +20,7 @@
     "Endpoints": {
       "www": {
         "Protocols": "Http1AndHttp2AndHttp3",
-        "Url": "http://loclahost:8080"
+        "Url": "http://0.0.0.0:8080"
       },
       "gRPC": {
         "Protocols": "Http2",
